--- a/agenda-tranferencia-bancaria-ui/src/app/transferencia-cadastro/transferencia-cadastro.component.html
+++ b/agenda-tranferencia-bancaria-ui/src/app/transferencia-cadastro/transferencia-cadastro.component.html
@@ -2,7 +2,7 @@
   <div class="ui-g">
 
     <div class="ui-g-12">
-      <h1>Agenda de transferências financeiras</h1>
+      <h1>Agenda transferência bancária</h1>
     </div>
 
     <div class="ui-g-12 ui-fluid">
